[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dafn"
version = "0.1.0"
description = "A short description of your project"
authors = [
    { name = "Julien Braine", email = "julienbraine@yahoo.fr" }
]
license = { text = "MIT" }
dependencies = [
    "plotly[express]",
    "xarray[io,accel]",
    "dask[complete]",
    "scipy",
    "scikit-learn",   # sklearn should be scikit-learn
    "anyio[trio]",
    "pydantic[email,timezone]"
]

[project.optional-dependencies]
spike2 = ["sonpy"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
